--- a/Project/src/scss/partials/_mixin.scss
+++ b/Project/src/scss/partials/_mixin.scss
@@ -56,3 +56,24 @@ width: 100%;
 height: 100%;
 object-fit: contain;
 }
+%textsize{
+  text-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+}
+%bordergradient{
+  border: 1px solid $gradient-first;
+  border-bottom-color: $gradient-second;
+  border-left-color: $gradient-second;
+}
+%blurbackground{
+  background: radial-gradient(
+    107.32% 141.42% at 0% 0%,
+    rgba(255, 255, 255, 0.4) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  box-shadow: -2.418426275253296px -2.418426275253296px 120.92131805419922px
+    0px rgba(255, 255, 255, 0.02) inset;
+  backdrop-filter: blur(5px);
+}
