--- a/Project/src/scss/style.css
+++ b/Project/src/scss/style.css
@@ -41,11 +41,32 @@ header .logo img {
      object-fit: contain;
 }
 
+header .nav_btns button .btn_elements .mini_card .card_txt h4, header .nav_btns button, header .nav_items ul li .list_hover ul li, header .nav_items ul li a {
+  text-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+#bg_img .volume_up, header .nav_btns button .btn_elements, header .nav_btns button, header .nav_items ul li .list_hover, header .nav_items {
+  border: 1px solid #0CF9EF;
+  border-bottom-color: #D78BFE;
+  border-left-color: #D78BFE;
+}
+
+#slider .swiper .swiper-slide:hover .slider_card, #slider .swiper .swiper-slide .slider_card .card_btns a, header .nav_btns button .btn_elements .right_side, header .nav_btns button .btn_elements, header .nav_btns button, header .nav_items ul li .list_hover ul, header .nav_items ul {
+  background: radial-gradient(107.32% 141.42% at 0% 0%, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
+  box-shadow: -2.4184262753px -2.4184262753px 120.9213180542px 0px rgba(255, 255, 255, 0.02) inset;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+}
+
 header {
   position: fixed;
   top: 46px;
   left: 0;
   right: 0;
+  z-index: 9999;
 }
 header .logo {
   width: 72px;
@@ -53,12 +74,8 @@ header .logo {
 }
 header .nav_items {
   border-radius: 8px;
-  border: 1px solid #0CF9EF;
-  border-bottom-color: #D78BFE;
-  border-left-color: #D78BFE;
 }
 header .nav_items ul {
-  background-color: rgba(255, 255, 255, 0.267);
   display: flex;
   border-radius: 8px;
   justify-content: space-around;
@@ -71,19 +88,12 @@ header .nav_items ul li {
   cursor: pointer;
 }
 header .nav_items ul li a {
-  text-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
   color: inherit;
 }
 header .nav_items ul li:hover .list_hover {
   opacity: 1;
 }
 header .nav_items ul li .list_hover {
-  border: 1px solid #0CF9EF;
-  border-bottom-color: #D78BFE;
-  border-left-color: #D78BFE;
   top: 70%;
   position: absolute;
   width: 67px;
@@ -94,17 +104,12 @@ header .nav_items ul li .list_hover {
   opacity: 0;
 }
 header .nav_items ul li .list_hover ul {
-  background: rgba(255, 255, 255, 0.16);
   display: flex;
   flex-direction: column;
 }
 header .nav_items ul li .list_hover ul li {
   text-align: center;
   color: #fff;
-  font-family: Gilroy-Medium;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
   padding: 7px 10px;
 }
 header .nav_btns {
@@ -116,20 +121,9 @@ header .nav_btns button {
   display: flex;
   align-items: center;
   gap: 18px;
-  background: radial-gradient(107.32% 141.42% at 0% 0%, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
-  box-shadow: -2.4184262753px -2.4184262753px 120.9213180542px 0px rgba(255, 255, 255, 0.02) inset;
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
-  border: 1px solid #0CF9EF;
-  border-bottom-color: #D78BFE;
-  border-left-color: #D78BFE;
   padding: 13px 27px;
   border-radius: 8px;
   color: #fff;
-  text-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
   position: relative;
 }
 header .nav_btns button .btn_elements {
@@ -138,13 +132,7 @@ header .nav_btns button .btn_elements {
   right: 0%;
   position: absolute;
   width: 240px;
-  border: 1px solid #0CF9EF;
-  border-bottom-color: #D78BFE;
-  border-left-color: #D78BFE;
   border-radius: 7px;
-  background-color: rgba(255, 255, 255, 0.2);
-  -webkit-backdrop-filter: blur(4.3607559204px);
-          backdrop-filter: blur(4.3607559204px);
   padding: 12px 8px;
   display: flex;
   gap: 17px;
@@ -175,21 +163,15 @@ header .nav_btns button .btn_elements .mini_card .card_txt {
   padding: 5px 14px;
 }
 header .nav_btns button .btn_elements .mini_card .card_txt h4 {
-  color: #FFF;
+  color: #fff;
   font-family: Gilroy-Bold;
   font-size: 10px;
-  font-style: normal;
-  font-weight: 400;
 }
 header .nav_btns button .btn_elements .right_side {
   margin-top: 8px;
   border-radius: 6px;
   width: 4px;
   height: 185px;
-  background: rgba(255, 255, 255, 0.4);
-  box-shadow: -1.7471857071px -1.7471857071px 104.8311462402px 0px rgba(0, 0, 0, 0);
-  -webkit-backdrop-filter: blur(17.4718570709px);
-          backdrop-filter: blur(17.4718570709px);
   position: relative;
 }
 header .nav_btns button .btn_elements .right_side::after {
@@ -222,4 +204,164 @@ body {
   height: 344px;
   background-image: url("../image/Cover-Back-Area.png");
   background-size: cover;
+  background-position: center;
+  position: relative;
+  z-index: -999;
+}
+#bg_img .volume_up {
+  position: absolute;
+  right: 100px;
+  bottom: 90px;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#slider {
+  position: relative;
+  z-index: 9999;
+}
+#slider .swiper {
+  padding-top: 100px;
+  padding-left: 70px;
+  width: 100%;
+  height: 100%;
+  top: -60px;
+}
+#slider .swiper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #1f1f1f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s ease-in-out;
+}
+#slider .swiper .swiper-slide .slider_card {
+  transition: 0.4s ease-in-out;
+  border-radius: 9px;
+}
+#slider .swiper .swiper-slide .slider_card .card_img {
+  transition: 0.4s ease-in-out;
+  width: 297px;
+  height: 170px;
+  border-radius: 9px;
+  overflow: hidden;
+}
+@media (max-width: 1270px) {
+  #slider .swiper .swiper-slide .slider_card .card_img {
+    width: 100%;
+  }
+}
+#slider .swiper .swiper-slide .slider_card .card_img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#slider .swiper .swiper-slide .slider_card .card_text {
+  transition: 0.4s ease-in-out;
+  padding: 27px 10px;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#slider .swiper .swiper-slide .slider_card .card_text h5 {
+  color: #fff;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+#slider .swiper .swiper-slide .slider_card .card_text p {
+  transition: 0.4s ease-in-out;
+  opacity: 0;
+  color: #fff;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+#slider .swiper .swiper-slide .slider_card .card_btns {
+  transition: 0.4s ease-in-out;
+  padding: 27px 0;
+  display: none;
+  opacity: 0;
+  align-items: center;
+  justify-content: center;
+  gap: 11px;
+}
+#slider .swiper .swiper-slide .slider_card .card_btns a {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#slider .swiper .swiper-slide .slider_card .card_btns #special_btn {
+  width: 42px;
+  height: 42px;
+  background: radial-gradient(107.32% 141.42% at 0% 0%, #0cf9f0 0%, #d686ff 100%);
+}
+#slider .swiper .swiper-slide:hover {
+  position: relative;
+  z-index: 999;
+  margin: 0;
+  padding: 0 0 50px 0;
+  border-radius: 9px;
+}
+#slider .swiper .swiper-slide:hover .slider_card {
+  border-radius: 8px;
+  position: absolute;
+  z-index: 999;
+  top: -70px;
+}
+#slider .swiper .swiper-slide:hover .slider_card .card_img {
+  border-radius: 9px;
+  overflow: hidden;
+  width: 363px;
+  height: 150px;
+}
+#slider .swiper .swiper-slide:hover .slider_card .card_text p {
+  opacity: 1;
+}
+#slider .swiper .swiper-slide:hover .slider_card .card_btns {
+  display: flex;
+  opacity: 1;
+}
+#slider .swiper .swiper-button-next {
+  width: 73px;
+  height: 73px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.644);
+}
+@media (max-width: 768px) {
+  #slider .swiper .swiper-button-next {
+    display: none;
+  }
+}
+#slider .swiper .swiper-button-next::after {
+  color: white;
+  font-size: 30px;
+}
+#slider .swiper .swiper-button-prev {
+  left: 80px;
+  width: 73px;
+  height: 73px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.644);
+}
+@media (max-width: 768px) {
+  #slider .swiper .swiper-button-prev {
+    display: none;
+  }
+}
+#slider .swiper .swiper-button-prev::after {
+  color: white;
+  font-size: 30px;
 }/*# sourceMappingURL=style.css.map */
