--- a/Project/src/scss/layout/_navbar.scss
+++ b/Project/src/scss/layout/_navbar.scss
@@ -13,9 +13,9 @@ header {
     }
   }
   .nav_items {
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
       display: none;
-  }
+    }
     border-radius: 8px;
     @extend %bordergradient;
     ul {
@@ -29,9 +29,9 @@ header {
         padding: 13px 17px;
         font-size: 14px;
         cursor: pointer;
-        @media (max-width:988px) {
+        @media (max-width: 988px) {
           padding: 12px 8px;
-      }
+        }
         a {
           @extend %textsize;
           color: inherit;
@@ -69,9 +69,9 @@ header {
     }
   }
   .nav_btns {
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
       display: none;
-  }
+    }
     display: flex;
     gap: 15px;
     justify-content: end;
@@ -84,9 +84,9 @@ header {
       gap: 18px;
 
       padding: 13px 27px;
-      @media (max-width:988px) {
+      @media (max-width: 988px) {
         padding: 12px 6px;
-    }
+      }
       border-radius: 8px;
       color: #fff;
       @extend %textsize;
@@ -171,5 +171,64 @@ header {
           rgba(248, 0, 0, 0.4);
       }
     }
+  }
+  .mobile_nav {
+    display: flex;
+    justify-content: end;
+    @media (min-width:768px) {
+      display: none;
+    }
+  }
+  .mobile_items {
+    transition: .4s ease-in-out;
+    position: fixed;
+    top: 0;
+    left: -200%;
+    bottom: 0;
+    z-index: 99999;
+    width: 70%;
+    height: 100vh;
+    padding: 50px 30px;
+    background-color: black;
+    .logo {
+      width: 72px;
+      height: 30px;
+      img {
+        @extend %logo;
+      }
+    }
+    .mobil_lists {
+      height: 88%;
+      margin-top: 40px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        li {
+          a {
+            color: #fff;
+            text-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 400;
+          }
+        }
+      }
+      a{
+        color: #FFF;
+text-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 120%;
+      }
+    }
+  }
+  .burger{
+    left: 0;
   }
 }
