--- a/Project/src/scss/style.css
+++ b/Project/src/scss/style.css
@@ -34,7 +34,7 @@ a {
   text-decoration: none;
 }
 
-header .logo img {
+header .mobile_items .logo img, header .logo img {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
@@ -214,6 +214,61 @@ header .nav_btns button .circle {
   background: #E24D4D;
   box-shadow: -1.2999999523px 1.2999999523px 4px 0px rgba(248, 0, 0, 0.4);
 }
+header .mobile_nav {
+  display: flex;
+  justify-content: end;
+}
+@media (min-width: 768px) {
+  header .mobile_nav {
+    display: none;
+  }
+}
+header .mobile_items {
+  transition: 0.4s ease-in-out;
+  position: fixed;
+  top: 0;
+  left: -200%;
+  bottom: 0;
+  z-index: 99999;
+  width: 70%;
+  height: 100vh;
+  padding: 50px 30px;
+  background-color: black;
+}
+header .mobile_items .logo {
+  width: 72px;
+  height: 30px;
+}
+header .mobile_items .mobil_lists {
+  height: 88%;
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+header .mobile_items .mobil_lists ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+header .mobile_items .mobil_lists ul li a {
+  color: #fff;
+  text-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+}
+header .mobile_items .mobil_lists a {
+  color: #FFF;
+  text-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+header .burger {
+  left: 0;
+}
 
 body {
   background-color: #1f1f1f;
@@ -229,6 +284,7 @@ main #bg_img {
   z-index: -999;
 }
 main #bg_img .volume_up {
+  transition: 0.4s ease-in-out;
   position: absolute;
   right: 100px;
   bottom: 90px;
@@ -247,7 +303,7 @@ main #bg_img .volume_up {
 }
 main #slider {
   position: relative;
-  z-index: 9999;
+  z-index: 9;
 }
 main #slider .swiper {
   padding-top: 100px;
@@ -397,7 +453,7 @@ main #slider .mySwiper_second {
 #signin {
   transition: 0.4s ease-in-out;
   position: fixed;
-  top: -100%;
+  top: -200%;
   left: 0;
   right: 0;
   bottom: 0;
